--- a/requirements.txt
+++ b/requirements.txt
@@ -1,162 +1,3 @@
-absl-py==2.1.0
-altair==5.5.0
-annotated-types==0.7.0
-arrow==1.3.0
-asgiref==3.8.1
-astunparse==1.6.3
-attrs==25.1.0
-blinker==1.8.2
-cachetools==5.5.1
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.7
-cmake==3.28.1
-colorama==0.4.6
-comtypes==1.4.5
-contextlib2==21.6.0
-contourpy==1.2.1
-cycler==0.12.1
-DateTime==5.5
-Django==5.0.4
-django-filter==2.3.0
-django-mapbox-location-field==1.5.0
-djangorestframework==3.11.0
-dotenv==0.9.9
-engineering-notation==0.10.0
-execnet==2.0.2
-filelock==3.17.0
-Flask==3.0.3
-flask-cors==5.0.1
-flatbuffers==25.1.24
-fonttools==4.51.0
-fsspec==2025.2.0
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.2
-google-api-python-client==2.166.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.4
-google-pasta==0.2.0
-googleapis-common-protos==1.69.2
-grpcio==1.71.0
-grpcio-status==1.71.0
-gTTS==2.5.3
-gunicorn==23.0.0
-h11==0.14.0
-h5py==3.12.1
-httplib2==0.22.0
-idna==3.7
-iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kagglehub==0.3.4
-keras==3.8.0
-kiwisolver==1.4.5
-libclang==18.1.1
-Markdown==3.2.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.8.4
-mdurl==0.1.2
-ml-dtypes==0.4.1
-mock==5.1.0
-mpmath==1.3.0
-namex==0.0.8
-narwhals==1.25.1
-networkx==3.4.2
-numpy==1.26.3
-opencv-contrib-python==4.9.0.80
-opencv-python==4.9.0.80
-opt_einsum==3.4.0
-optree==0.14.0
-packaging==24.0
-pandas==2.2.1
-path==16.10.0
-path.py==12.5.0
-pillow==11.2.1
-playsound==1.3.0
-pluggy==1.4.0
-proto-plus==1.26.1
-protobuf==5.29.3
-psutil==6.1.1
-psycopg2-binary==2.9.9
-py-cpuinfo==9.0.0
-pyarrow==19.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-PyAudio==0.2.14
-pydantic==2.11.2
-pydantic_core==2.33.1
-pydeck==0.9.1
-pygame==2.5.2
-Pygments==2.19.1
-pyparsing==3.1.2
-pypiwin32==223
-pytesseract==0.3.13
-pytest==8.1.1
-pytest-shutil==1.7.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-engineio==4.9.1
-PythonTurtle==0.3.2
-pyttsx==1.1
-pyttsx3==2.90
-pytz==2024.1
-pywin32==306
-PyYAML==6.0.2
-referencing==0.36.2
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.9
-scikit-learn==1.6.1
-scipy==1.15.1
-seaborn==0.13.2
-setuptools==78.1.0
-simple-websocket==1.0.0
-six==1.16.0
-smmap==5.0.2
-SpeechRecognition==3.10.4
-sqlparse==0.5.0
-streamlit==1.42.0
-sympy==1.13.1
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow_intel==2.18.0
-termcolor==2.4.0
-threadpoolctl==3.6.0
-times==0.7
-tk-tools==0.16.0
-toml==0.10.2
-torch==2.6.0
-torchvision==0.21.0
-tornado==6.4.2
-tqdm==4.67.0
-types-python-dateutil==2.9.0.20240316
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-tzdata==2024.1
-ultralytics==8.3.71
-ultralytics-thop==2.0.14
-uritemplate==4.1.1
-urllib3==2.2.2
-utils==1.0.2
-watchdog==6.0.0
-Werkzeug==3.0.4
-wheel==0.45.1
-wrapt==1.17.2
-wsproto==1.2.0
-xgboost==3.0.0
-zope.interface==6.2
-flask
-opencv-python
+Flask
+opencv-python-headless
 pyttsx3
-gunicorn
